--- a/tusmo_web/templates/index.html
+++ b/tusmo_web/templates/index.html
@@ -1,21 +1,18 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-        <script>let real_word = "{{ data }}";</script>
-        <script src="{{ url_for('static', filename='confetti.js') }}"></script>
-        <script src="{{ url_for('static', filename='script.js') }}"></script>
-    </head>
-    <body>
-        <div class="home-button-container">
-            <a href="/" class="home-button">Home</a>
-        </div>
-        <div class="game-info">
-            <span id="word-number">Mot 1</span> - <span id="score">Score : 0</span>
-        </div>
-        <div class="grid-container"></div>
-        <div class="alphabet-container">
-            <div class="alphabet-grid"></div>
-        </div>              
-    </body>
-</html>
+
+<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+<script>let real_word = "{{ data.word }}";
+    let score = parseInt("{{ data.score }}");
+    let count = parseInt("{{ data.count }}");
+</script>
+<script src="{{ url_for('static', filename='confetti.js') }}"></script>
+<script src="{{ url_for('static', filename='script.js') }}"></script>
+<div class="home-button-container">
+    <a href="/" class="home-button">Home</a>
+</div>
+<div class="game-info">
+    <span id="word-number">Mot {{ data.count }}</span> - <span id="score">Score : {{ data.score }}</span>
+</div>
+<div class="grid-container"></div>
+<div class="alphabet-container">
+    <div class="alphabet-grid"></div>
+</div>              
