--- a/tusmo_web/static/style.css
+++ b/tusmo_web/static/style.css
@@ -129,9 +129,10 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: 100%;
   font-family: 'Arial', sans-serif;
   margin: 0;
+  padding: 0;
 }
 
 /* Conteneur principal */
@@ -206,8 +207,10 @@ body {
 /* Conteneur pour le bouton Home */
 .home-button-container {
   position: absolute;
-  top: 10px;
-  left: 10px;
+  top: 15px;
+  left: 15px;
+  height: 1em;
+  width: 2em;
 }
 
 
@@ -225,6 +228,8 @@ body {
   transition: all 0.3s ease;
   text-decoration: none;
   display: inline-block;
+  height: 1em;
+  width: 2em;
 }
 
 .home-button:hover {
