--- a/tusmo_web/templates/index.html
+++ b/tusmo_web/templates/index.html
@@ -6,8 +6,22 @@
 </script>
 <script src="{{ url_for('static', filename='confetti.js') }}"></script>
 <script src="{{ url_for('static', filename='script.js') }}"></script>
-<div class="home-button-container">
-    <a href="/" class="home-button">Home</a>
+<div class="home-button-container" onclick='window.location.href="/"'>
+    <a class="home-button">
+        <span style="
+            border-style: solid;
+            border-width: 0.25em 0.25em 0 0;
+            content: '';
+            display: inline-block;
+            height: 0.45em;
+            position: relative;
+            top: 0.20em;
+            transform: rotate(-135deg);
+            vertical-align: top;
+            width: 0.45em;
+            left: 0.14em;
+        "></span>
+    </a>
 </div>
 <div class="game-info">
     <span id="word-number">Mot {{ data.count }}</span> - <span id="score">Score : {{ data.score }}</span>
