Correction de la taille des lettres

--- a/tusmo_web/templates/menu.html
+++ b/tusmo_web/templates/menu.html
@@ -13,9 +13,9 @@
           </h1>
           
         <div class="button-container">
-            <button class="menu-button" onclick="window.location.href='{{ url_for('solo') }}'">Solo</button>
-            <button class="menu-button" onclick="window.location.href='{{ url_for('versus_ia') }}'">Versus IA</button>
-            <button class="menu-button" onclick="window.location.href='{{ url_for('regles') }}'">Règles</button>
+            <button class="menu-button" onclick="window.location.href='/solo'">Solo</button>
+            <button class="menu-button" onclick="window.location.href='/versus_ia'">Versus IA</button>
+            <button class="menu-button" onclick="window.location.href='/regles'">Règles</button>
         </div>
     </div>
 </body>
