--- a/tusmo_web/static/style.css
+++ b/tusmo_web/static/style.css
@@ -19,8 +19,9 @@ body {
 .grid-container {
   display: grid;
   margin: auto; /* Centrer horizontalement et verticalement */
-  height: 100%; /* Occupe la hauteur définie par la grille */
   gap : 0.5rem;
+  box-sizing: border-box;/* Intégrer le padding dans le calcul de l'élément */
+  padding: 0.25rem;/* Pour facilier les calculs, le width de la grille ressemble alors a 1/2 * gap + cell + gap + cell + ... 1/2 * gap et la height à 1/2 * gap + cell + gap + cell + ... 1/2 * gap, on a donc height / width = k * (gap + cell) / (l * (gap + cell)) = k / l = NBTRY / NBLETTERS avec k et l des entiers */
 }
 
 /* Style des cellules */
@@ -67,7 +68,9 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 100%; /* Occupe la hauteur définie par la grille */
+  box-sizing: border-box;/* Intégrer le padding dans le calcul de l'élément */
+  padding: 0.25rem;/* Pour facilier les calculs, le width de la grille ressemble alors a 1/2 * gap + cell + gap + cell + ... 1/2 * gap et la height à 1/2 * gap + cell + gap + cell + ... 1/2 * gap, on a donc height / width = 3 * (gap + cell) / (10 * (gap + cell)) = 3 / 10*/
+  height: min(100%, 30vw);/* Occupe la hauteur définie par la grille (ou moins si la largeur dépasse (100vw * height / width = 100vw * 3 / 10 = 30 vw))*/
 }
 
 .alphabet-grid {
