--- a/tusmo_web/templates/index.html
+++ b/tusmo_web/templates/index.html
@@ -7,6 +7,7 @@
 <script src="{{ url_for('static', filename='confetti.js') }}"></script>
 <script src="{{ url_for('static', filename='script.js') }}"></script>
 <script>
+    const PLAYERTURN = -1;
     document.addEventListener('keydown', (event) => enterKey(event.key));
 </script>
 <div class="home-button-container" onclick='window.location.href="/"'>
