--- a/tusmo_web/templates/versusia.html
+++ b/tusmo_web/templates/versusia.html
@@ -20,7 +20,7 @@
         let cells = Array.from(document.querySelectorAll("div.cell"));
         let cellBeforeFirstEmptyCellIdx = cells.length - 1;
         for (let i = 0; i < cells.length; i++) {
-            if (cells[i].innerHTML == "" || cells[i].classList.contains("placeholder")) {
+            if (cells[i].innerHTML == "") {
                 cellBeforeFirstEmptyCellIdx = i - 1;
                 break;
             }
