--- a/tusmo_web/templates/menu.html
+++ b/tusmo_web/templates/menu.html
@@ -9,7 +9,7 @@
 <body class="menu-background">
     <div class="menu-container">
         <h1 class="menu-title">
-            <span class="T">T</span>U<span class="s">S</span>M<span class="o">O</span>
+            <span class="T">S</span>U<span class="s">M</span>O<span class="o">T</span>
           </h1>
           
         <div class="button-container">
