--- a/tusmo_web/templates/versusia.html
+++ b/tusmo_web/templates/versusia.html
@@ -6,7 +6,7 @@
 <script src="{{ url_for('static', filename='confetti.js') }}"></script>
 <script src="{{ url_for('static', filename='script.js') }}"></script>
 <script>
-    const PLAYERTURN = 0;
+    const PLAYERTURN = Math.floor(Math.random() * 2);
 
     async function processKeys(data) {
         for (let i = 0; i < data.length; i++) {
@@ -16,7 +16,41 @@
         enterKey("Enter", 1);
     }
 
-    document.addEventListener('keydown', (event) => {
+    document.addEventListener('DOMContentLoaded', () => {
+        if(PLAYERTURN === 1){
+            fetch(`ia`, {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify({
+                        len : NBLETTERS,
+                        firstLetter : FIRSTLETTER,
+                        validLetters : validLetters,
+                        stateLetters : Object.entries(stateLetters).reduce((acc, [key, value]) => {
+                            acc[key] = {
+                                ...value,
+                                posValid: Array.from(value.posValid),
+                                posGood: Array.from(value.posGood),
+                            };
+                            return acc;
+                            }, {}
+                        )
+                    })
+                })
+                .then(response => {
+                    if (!response.ok) {
+                        throw new Error(`HTTP error! status: ${response.status}`);
+                    }
+                    return response.text();
+                })
+                .then(processKeys)
+                .catch(error => {
+                    console.error('Erreur lors de la requête:', error);
+                });
+        }
+
+        document.addEventListener('keydown', (event) => {
         let cells = Array.from(document.querySelectorAll("div.cell"));
         let cellBeforeFirstEmptyCellIdx = cells.length - 1;
         for (let i = 0; i < cells.length; i++) {
@@ -37,7 +71,6 @@
             }
 
             if(event.key == "Enter" && Math.floor(cellBeforeFirstEmptyCellIdx / NBLETTERS) % 2 !== PLAYERTURN){
-                console.log("Send IA");
                 fetch(`ia`, {
                     method: 'POST',
                     headers: {
@@ -68,17 +101,9 @@
                 .catch(error => {
                     console.error('Erreur lors de la requête:', error);
                 });
-                console.log(Object.entries(stateLetters).reduce((acc, [key, value]) => {
-                            acc[key] = {
-                                ...value,
-                                posValid: Array.from(value.posValid),
-                                posGood: Array.from(value.posGood),
-                            };
-                            return acc;
-                            }, {}
-                        ));
             }
         }
+    });
     });
 </script>
 <div class="home-button-container" onclick='window.location.href="/"'>
