--- a/tusmo_web/templates/index.html
+++ b/tusmo_web/templates/index.html
@@ -4,13 +4,12 @@
     let score = parseInt("{{ data.score }}");
     let count = parseInt("{{ data.count }}");
 </script>
+<script src="{{ url_for('static', filename='eventManager.js') }}"></script>
 <script src="{{ url_for('static', filename='confetti.js') }}"></script>
 <script src="{{ url_for('static', filename='script.js') }}"></script>
 <script>
     const PLAYERTURN = -1;
-    document.addEventListener('DOMContentLoaded', () => {
-        document.addEventListener('keydown', (event) => enterKey(event.key));
-    });
+    eventManager.subscribe("keydown", (key) => enterKey(key));
 </script>
 <div class="home-button-container" onclick='window.location.href="/"'>
     <a class="home-button">
