--- a/tusmo_web/templates/menu.html
+++ b/tusmo_web/templates/menu.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-    <title>Tusmo</title>
+    <link rel="icon" type="image/png" href="{{ url_for('static', filename='favicon.png') }}">
+    <title>SUMOT</title>
 </head>
 <body class="menu-background">
     <div class="menu-container">
