--- a/tusmo_web/templates/index.html
+++ b/tusmo_web/templates/index.html
@@ -1,4 +1,5 @@
-
+<link rel="icon" type="image/png" href="{{ url_for('static', filename='favicon.png') }}">
+<title>SUMOT</title>
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 <script>let real_word = "{{ data.word }}";
     let score = parseInt("{{ data.score }}");
