Put background in localstorage

--- a/tusmo_web/static/style.css
+++ b/tusmo_web/static/style.css
@@ -13,7 +13,7 @@ body {
   gap: 20px;
   padding: 10px;
   height: calc(100% - 38px);
-  background-image: url("/static/wallpaper.jpg"); /* Remplacez par le chemin de votre image */
+  /*background-image: url("/static/wallpaper.jpg");*/ /* Remplacez par le chemin de votre image */
   background-repeat: no-repeat; /* Pas de répétition de l'image */
   background-position: center; /* Centre l'image */
   background-size: auto; /* Pas de redimensionnement */
