--- a/tusmo_web/templates/regles.html
+++ b/tusmo_web/templates/regles.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="{{ url_for('static', filename='favicon.png') }}">
+    <script src="{{ url_for('static', filename='appUtils.js') }}"></script>
+    <script> 
+        /** Charger le fond d'écran depuis le cache **/
+        appUtils.loadObj("/static/wallpaper.jpg").then((res) => {
+            appUtils.subscribe("DOMContentLoaded", () => {
+                document.body.style.backgroundImage = `url(${res})`;
+            });
+        })
+    </script>
     <title>SUMOT</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
