--- a/tusmo_web/templates/versusia.html
+++ b/tusmo_web/templates/versusia.html
@@ -6,12 +6,20 @@
     let count = parseInt("{{ data.count }}");
 </script>
 <script src="{{ url_for('static', filename='appUtils.js') }}"></script>
-<script> 
+<script>
+    let domLoad = false;
+    appUtils.subscribe("DOMContentLoaded", () => domLoad = true);
+    
     /** Charger le fond d'écran depuis le cache **/
     appUtils.loadObj("/static/wallpaper.jpg").then((res) => {
-        appUtils.subscribe("DOMContentLoaded", () => {
+        if(domLoad){
             document.body.style.backgroundImage = `url(${res})`;
-        });
+        }
+        else {
+            appUtils.subscribe("DOMContentLoaded", () => {
+                document.body.style.backgroundImage = `url(${res})`;
+            });
+        }
     })
 </script>
 <script src="{{ url_for('static', filename='confetti.js') }}"></script>
