--- a/tusmo_web/templates/index.html
+++ b/tusmo_web/templates/index.html
@@ -1,54 +1,63 @@
-<link rel="icon" type="image/png" href="{{ url_for('static', filename='favicon.png') }}">
-<title>SUMOT</title>
-<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-<script>let real_word = "{{ data.word }}";
-    let score = parseInt("{{ data.score }}");
-    let count = parseInt("{{ data.count }}");
-</script>
-<script src="{{ url_for('static', filename='appUtils.js') }}"></script>
-<script>
-    let domLoad = false;
-    appUtils.subscribe("DOMContentLoaded", () => domLoad = true);
-    
-    /** Charger le fond d'écran depuis le cache **/
-    appUtils.loadObj("/static/wallpaper.jpg").then((res) => {
-        if(domLoad){
-            document.body.style.backgroundImage = `url(${res})`;
-        }
-        else {
-            appUtils.subscribe("DOMContentLoaded", () => {
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SUMOT</title>
+    <link rel="icon" type="image/png" href="{{ url_for('static', filename='favicon.png') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <script>let real_word = "{{ data.word }}";
+        let score = parseInt("{{ data.score }}");
+        let count = parseInt("{{ data.count }}");
+    </script>
+    <script src="{{ url_for('static', filename='appUtils.js') }}"></script>
+    <script>
+        let domLoad = false;
+        appUtils.subscribe("DOMContentLoaded", () => domLoad = true);
+
+        /** Charger le fond d'écran depuis le cache **/
+        appUtils.loadObj("/static/wallpaper.jpg").then((res) => {
+            if(domLoad){
                 document.body.style.backgroundImage = `url(${res})`;
-            });
-        }
-    })
-</script>
-<script src="{{ url_for('static', filename='confetti.js') }}"></script>
-<script src="{{ url_for('static', filename='script.js') }}"></script>
-<script>
-    const PLAYERTURN = -1;
-    appUtils.subscribe("keydown", (key) => enterKey(key));
-</script>
-<div class="home-button-container" onclick='window.location.href="/"'>
-    <a class="home-button">
-        <span style="
-            border-style: solid;
-            border-width: 0.25em 0.25em 0 0;
-            content: '';
-            display: inline-block;
-            height: 0.45em;
-            position: relative;
-            top: 0.20em;
-            transform: rotate(-135deg);
-            vertical-align: top;
-            width: 0.45em;
-            left: 0.14em;
-        "></span>
-    </a>
-</div>
-<div class="game-info">
-    <span id="word-number">Mot {{ data.count }}</span> - <span id="score">Score : {{ data.score }}</span>
-</div>
-<div class="grid-container"></div>
-<div class="alphabet-container">
-    <div class="alphabet-grid"></div>
-</div>              
+            }
+            else {
+                appUtils.subscribe("DOMContentLoaded", () => {
+                    document.body.style.backgroundImage = `url(${res})`;
+                });
+            }
+        })
+    </script>
+    <script src="{{ url_for('static', filename='confetti.js') }}"></script>
+    <script src="{{ url_for('static', filename='script.js') }}"></script>
+    <script>
+        const PLAYERTURN = -1;
+        appUtils.subscribe("keydown", (key) => enterKey(key));
+    </script>
+</head>
+<body>
+    <div class="home-button-container" onclick='window.location.href="/"'>
+        <a class="home-button">
+            <span style="
+                border-style: solid;
+                border-width: 0.25em 0.25em 0 0;
+                content: '';
+                display: inline-block;
+                height: 0.45em;
+                position: relative;
+                top: 0.20em;
+                transform: rotate(-135deg);
+                vertical-align: top;
+                width: 0.45em;
+                left: 0.14em;
+            "></span>
+        </a>
+    </div>
+    <div class="game-info">
+        <span id="word-number">Mot {{ data.count }}</span> - <span id="score">Score : {{ data.score }}</span>
+    </div>
+    <div class="grid-container"></div>
+    <div class="alphabet-container">
+        <div class="alphabet-grid"></div>
+    </div>              
+</body>
+</html>
