--- a/tusmo_web/templates/versusia.html
+++ b/tusmo_web/templates/versusia.html
@@ -1,151 +1,160 @@
-<link rel="icon" type="image/png" href="{{ url_for('static', filename='favicon.png') }}">
-<title>SUMOT</title>
-<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-<script>let real_word = "{{ data.word }}";
-    let score = parseInt("{{ data.score }}");
-    let count = parseInt("{{ data.count }}");
-</script>
-<script src="{{ url_for('static', filename='appUtils.js') }}"></script>
-<script>
-    let domLoad = false;
-    appUtils.subscribe("DOMContentLoaded", () => domLoad = true);
-    
-    /** Charger le fond d'écran depuis le cache **/
-    appUtils.loadObj("/static/wallpaper.jpg").then((res) => {
-        if(domLoad){
-            document.body.style.backgroundImage = `url(${res})`;
-        }
-        else {
-            appUtils.subscribe("DOMContentLoaded", () => {
-                document.body.style.backgroundImage = `url(${res})`;
-            });
-        }
-    })
-</script>
-<script src="{{ url_for('static', filename='confetti.js') }}"></script>
-<script src="{{ url_for('static', filename='script.js') }}"></script>
-<script>
-    const PLAYERTURN = Math.floor(Math.random() * 2);
-
-    async function processKeys(data) {
-        for (let i = 0; i < data.length; i++) {
-            enterKey(data.charAt(i), 1);
-            await new Promise(resolve => setTimeout(resolve, 100)); // Pause de 100 ms entre les appels
-        }
-        enterKey("ENTER", 1);
-    }
-
-    appUtils.subscribe('DOMContentLoaded', () => {
-        if(PLAYERTURN === 1){
-            fetch(`ia`, {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json'
-                    },
-                    body: JSON.stringify({
-                        len : NBLETTERS,
-                        firstLetter : FIRSTLETTER,
-                        validLetters : validLetters,
-                        stateLetters : Object.entries(stateLetters).reduce((acc, [key, value]) => {
-                            acc[key] = {
-                                ...value,
-                                posValid: Array.from(value.posValid),
-                                posGood: Array.from(value.posGood),
-                            };
-                            return acc;
-                            }, {}
-                        )
-                    })
-                })
-                .then(response => {
-                    if (!response.ok) {
-                        throw new Error(`HTTP error! status: ${response.status}`);
-                    }
-                    return response.text();
-                })
-                .then(processKeys)
-                .catch(error => {
-                    console.error('Erreur lors de la requête:', error);
-                });
-        }
-    });
-
-    appUtils.subscribe("keydown", (key) => {
-        let cells = Array.from(document.querySelectorAll("div.cell"));
-        let cellBeforeFirstEmptyCellIdx = cells.length - 1;
-        for (let i = 0; i < cells.length; i++) {
-            if (cells[i].innerHTML == "") {
-                cellBeforeFirstEmptyCellIdx = i - 1;
-                break;
-            }
-        }
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SUMOT</title>
+    <link rel="icon" type="image/png" href="{{ url_for('static', filename='favicon.png') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <script>let real_word = "{{ data.word }}";
+        let score = parseInt("{{ data.score }}");
+        let count = parseInt("{{ data.count }}");
+    </script>
+    <script src="{{ url_for('static', filename='appUtils.js') }}"></script>
+    <script>
+        let domLoad = false;
+        appUtils.subscribe("DOMContentLoaded", () => domLoad = true);
         
-        if(Math.floor(cellBeforeFirstEmptyCellIdx / NBLETTERS) % 2 === PLAYERTURN){
-            enterKey(key, 0);
+        /** Charger le fond d'écran depuis le cache **/
+        appUtils.loadObj("/static/wallpaper.jpg").then((res) => {
+            if(domLoad){
+                document.body.style.backgroundImage = `url(${res})`;
+            }
+            else {
+                appUtils.subscribe("DOMContentLoaded", () => {
+                    document.body.style.backgroundImage = `url(${res})`;
+                });
+            }
+        })
+    </script>
+    <script src="{{ url_for('static', filename='confetti.js') }}"></script>
+    <script src="{{ url_for('static', filename='script.js') }}"></script>
+    <script>
+        const PLAYERTURN = Math.floor(Math.random() * 2);
 
+        async function processKeys(data) {
+            for (let i = 0; i < data.length; i++) {
+                enterKey(data.charAt(i), 1);
+                await new Promise(resolve => setTimeout(resolve, 100)); // Pause de 100 ms entre les appels
+            }
+            enterKey("ENTER", 1);
+        }
+
+        appUtils.subscribe('DOMContentLoaded', () => {
+            if(PLAYERTURN === 1){
+                fetch(`ia`, {
+                        method: 'POST',
+                        headers: {
+                            'Content-Type': 'application/json'
+                        },
+                        body: JSON.stringify({
+                            len : NBLETTERS,
+                            firstLetter : FIRSTLETTER,
+                            validLetters : validLetters,
+                            stateLetters : Object.entries(stateLetters).reduce((acc, [key, value]) => {
+                                acc[key] = {
+                                    ...value,
+                                    posValid: Array.from(value.posValid),
+                                    posGood: Array.from(value.posGood),
+                                };
+                                return acc;
+                                }, {}
+                            )
+                        })
+                    })
+                    .then(response => {
+                        if (!response.ok) {
+                            throw new Error(`HTTP error! status: ${response.status}`);
+                        }
+                        return response.text();
+                    })
+                    .then(processKeys)
+                    .catch(error => {
+                        console.error('Erreur lors de la requête:', error);
+                    });
+            }
+        });
+
+        appUtils.subscribe("keydown", (key) => {
+            let cells = Array.from(document.querySelectorAll("div.cell"));
+            let cellBeforeFirstEmptyCellIdx = cells.length - 1;
             for (let i = 0; i < cells.length; i++) {
                 if (cells[i].innerHTML == "") {
                     cellBeforeFirstEmptyCellIdx = i - 1;
                     break;
                 }
             }
+            
+            if(Math.floor(cellBeforeFirstEmptyCellIdx / NBLETTERS) % 2 === PLAYERTURN){
+                enterKey(key, 0);
 
-            if(key == "ENTER" && Math.floor(cellBeforeFirstEmptyCellIdx / NBLETTERS) % 2 !== PLAYERTURN){
-                fetch(`ia`, {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json'
-                    },
-                    body: JSON.stringify({
-                        len : NBLETTERS,
-                        firstLetter : FIRSTLETTER,
-                        validLetters : validLetters,
-                        stateLetters : Object.entries(stateLetters).reduce((acc, [key, value]) => {
-                            acc[key] = {
-                                ...value,
-                                posValid: Array.from(value.posValid),
-                                posGood: Array.from(value.posGood),
-                            };
-                            return acc;
-                            }, {}
-                        )
-                    })
-                })
-                .then(response => {
-                    if (!response.ok) {
-                        throw new Error(`HTTP error! status: ${response.status}`);
+                for (let i = 0; i < cells.length; i++) {
+                    if (cells[i].innerHTML == "") {
+                        cellBeforeFirstEmptyCellIdx = i - 1;
+                        break;
                     }
-                    return response.text();
-                })
-                .then(processKeys)
-                .catch(error => {
-                    console.error('Erreur lors de la requête:', error);
-                });
+                }
+
+                if(key == "ENTER" && Math.floor(cellBeforeFirstEmptyCellIdx / NBLETTERS) % 2 !== PLAYERTURN){
+                    fetch(`ia`, {
+                        method: 'POST',
+                        headers: {
+                            'Content-Type': 'application/json'
+                        },
+                        body: JSON.stringify({
+                            len : NBLETTERS,
+                            firstLetter : FIRSTLETTER,
+                            validLetters : validLetters,
+                            stateLetters : Object.entries(stateLetters).reduce((acc, [key, value]) => {
+                                acc[key] = {
+                                    ...value,
+                                    posValid: Array.from(value.posValid),
+                                    posGood: Array.from(value.posGood),
+                                };
+                                return acc;
+                                }, {}
+                            )
+                        })
+                    })
+                    .then(response => {
+                        if (!response.ok) {
+                            throw new Error(`HTTP error! status: ${response.status}`);
+                        }
+                        return response.text();
+                    })
+                    .then(processKeys)
+                    .catch(error => {
+                        console.error('Erreur lors de la requête:', error);
+                    });
+                }
             }
-        }
-    });
-</script>
-<div class="home-button-container" onclick='window.location.href="/"'>
-    <a class="home-button">
-        <span style="
-            border-style: solid;
-            border-width: 0.25em 0.25em 0 0;
-            content: '';
-            display: inline-block;
-            height: 0.45em;
-            position: relative;
-            top: 0.20em;
-            transform: rotate(-135deg);
-            vertical-align: top;
-            width: 0.45em;
-            left: 0.14em;
-        "></span>
-    </a>
-</div>
-<div class="game-info">
-    <span id="word-number">Mot {{ data.count }}</span> - <span id="score">Score : {{ data.score }}</span>
-</div>
-<div class="grid-container"></div>
-<div class="alphabet-container">
-    <div class="alphabet-grid"></div>
-</div>      
+        });
+    </script>
+</head>
+<body>
+    <div class="home-button-container" onclick='window.location.href="/"'>
+        <a class="home-button">
+            <span style="
+                border-style: solid;
+                border-width: 0.25em 0.25em 0 0;
+                content: '';
+                display: inline-block;
+                height: 0.45em;
+                position: relative;
+                top: 0.20em;
+                transform: rotate(-135deg);
+                vertical-align: top;
+                width: 0.45em;
+                left: 0.14em;
+            "></span>
+        </a>
+    </div>
+    <div class="game-info">
+        <span id="word-number">Mot {{ data.count }}</span> - <span id="score">Score : {{ data.score }}</span>
+    </div>
+    <div class="grid-container"></div>
+    <div class="alphabet-container">
+        <div class="alphabet-grid"></div>
+    </div>      
+</body>
+</html>
