--- a/tusmo_web/templates/regles.html
+++ b/tusmo_web/templates/regles.html
@@ -2,6 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SUMOT</title>
     <link rel="icon" type="image/png" href="{{ url_for('static', filename='favicon.png') }}">
     <script src="{{ url_for('static', filename='appUtils.js') }}"></script>
@@ -10,7 +11,7 @@
         appUtils.subscribe("DOMContentLoaded", () => domLoad = true);
         
         /** Charger le fond d'écran depuis le cache **/
-        appUtils.loadObj("/static/wallpaper.jpg").then((res) => {
+        appUtils.loadObj("/static/wallpaper.jpg", true).then((res) => {
             if(domLoad){
                 document.body.style.backgroundImage = `url(${res})`;
             }
