--- a/tusmo_web/templates/regles.html
+++ b/tusmo_web/templates/regles.html
@@ -7,19 +7,11 @@
     <link rel="icon" type="image/png" href="{{ url_for('static', filename='favicon.png') }}">
     <script src="{{ url_for('static', filename='appUtils.js') }}"></script>
     <script>
-        let domLoad = false;
-        appUtils.subscribe("DOMContentLoaded", () => domLoad = true);
-        
         /** Charger le fond d'écran depuis le cache **/
         appUtils.loadObj("/static/wallpaper.jpg", true).then((res) => {
-            if(domLoad){
+            appUtils.doIfOrWhen("DOMContentLoaded", () => {
                 document.body.style.backgroundImage = `url(${res})`;
-            }
-            else {
-                appUtils.subscribe("DOMContentLoaded", () => {
-                    document.body.style.backgroundImage = `url(${res})`;
-                });
-            }
+            });
         })
     </script>
     <title>SUMOT</title>
