--- a/tusmo_web/templates/index.html
+++ b/tusmo_web/templates/index.html
@@ -27,23 +27,21 @@
     </script>
 </head>
 <body>
-    <div class="home-button-container" onclick='window.location.href="/"'>
-        <a class="home-button">
-            <span style="
-                border-style: solid;
-                border-width: 0.25em 0.25em 0 0;
-                content: '';
-                display: inline-block;
-                height: 0.45em;
-                position: relative;
-                top: 0.20em;
-                transform: rotate(-135deg);
-                vertical-align: top;
-                width: 0.45em;
-                left: 0.14em;
-            "></span>
-        </a>
-    </div>
+    <a class="home-button" onclick='window.location.href="/"'>
+        <span style="
+            border-style: solid;
+            border-width: 0.25em 0.25em 0 0;
+            content: '';
+            display: inline-block;
+            height: 0.45em;
+            position: relative;
+            top: 0.20em;
+            transform: rotate(-135deg);
+            vertical-align: top;
+            width: 0.45em;
+            left: 0.14em;
+        "></span>
+    </a>
     <div class="game-info">
         <span id="word-number">Mot {{ data.count }}</span> - <span id="score">Score : {{ data.score }}</span>
     </div>
