--- a/tusmo_web/templates/regles.html
+++ b/tusmo_web/templates/regles.html
@@ -18,23 +18,21 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
-    <div class="home-button-container" onclick='window.location.href="/"'>
-        <a class="home-button">
-            <span style="
-                border-style: solid;
-                border-width: 0.25em 0.25em 0 0;
-                content: '';
-                display: inline-block;
-                height: 0.45em;
-                position: relative;
-                top: 0.20em;
-                transform: rotate(-135deg);
-                vertical-align: top;
-                width: 0.45em;
-                left: 0.14em;
-            "></span>
-        </a>
-    </div>
+    <a class="home-button" onclick='window.location.href="/"'>
+        <span style="
+            border-style: solid;
+            border-width: 0.25em 0.25em 0 0;
+            content: '';
+            display: inline-block;
+            height: 0.45em;
+            position: relative;
+            top: 0.20em;
+            transform: rotate(-135deg);
+            vertical-align: top;
+            width: 0.45em;
+            left: 0.14em;
+        "></span>
+    </a>
 
     <!-- Titre avec surlignage alterné -->
     <h1 class="rules-title">
